apply google styling guide